<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_topic"
                android:id="@+id/btn_study_note"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_ques"
                android:id="@+id/btn_exercise"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trial_exam"
                android:id="@+id/btn_trial"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/final_exam"
                android:id="@+id/btn_final"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="AKTIVITI SKOR"
                android:id="@+id/btn_view_exercise_score"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="LATIHAN SKOR"
                android:id="@+id/btn_view_trial_score"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UJIAN SKOR"
                android:id="@+id/btn_view_final_score"/>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>